<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/home_page_menu_home"
        android:icon="@drawable/home_icon"
        android:title="@string/home"
        android:visible="true"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/home_page_menu_search"
        android:icon="@drawable/search_icon"
        android:title="@string/search"
        android:visible="true"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/home_page_menu_log_out"
        android:icon="@drawable/log_out"
        android:title="@string/log_out"
        android:visible="true"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom" />


</menu>