<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutHomePageView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBgBlack"
    tools:context=".controller.HomePageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarMenu"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvAppTitle"
                android:transitionName="appTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/red"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideLeftMargin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvRoundPicProfile"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:cardCornerRadius="@dimen/dimens_40"
                app:layout_constraintEnd_toStartOf="@+id/guideRightMargin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/profileIconBgColor"
                    >

                    <ImageView
                        android:id="@+id/ivProfilePic"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        tools:src="@drawable/profile_pic_na"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/profile_icon" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guide1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent=".1"
                        />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guide2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent=".98"
                        />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guide3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent=".1"
                        />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guide4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent=".9"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLeftMargin"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".04"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideRightMargin"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".96"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tvUsernameBigTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="EDGE'S PLAYLIST"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarMenu"
        android:layout_margin="@dimen/playlist_text_margin"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlistGridView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameBigTitle"
        app:layout_constraintBottom_toTopOf="@+id/glBottomGrid"
        android:layout_margin="@dimen/dimens_8"
        />

    <TextView
        android:id="@+id/pageNbr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/prevPageArrow"
        app:layout_constraintBottom_toBottomOf="@+id/prevPageArrow"
        tools:text="0/0"
        android:textColor="@color/secondaryTextColor"/>

    <ImageButton
        android:id="@+id/prevPageArrow"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/left_arrow"
        android:layout_marginBottom="@dimen/dimens_10"
        android:contentDescription="@string/prev_page_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pageNbr"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
        />

    <ImageButton
        android:id="@+id/nextPageArrow"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/right_arrow"
        android:layout_marginBottom="@dimen/dimens_10"
        android:contentDescription="@string/next_page_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pageNbr"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/home_page_menu"
        android:foregroundGravity="center"
        android:layout_alignParentBottom="true"
        android:visibility="visible"
        app:labelVisibilityMode="labeled"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBottomGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".86"/>

</androidx.constraintlayout.widget.ConstraintLayout>